# deccp

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
.github/workflows/: ci.yml
