[project]
name = "code-ccp-extractor"
version = "0.1.0"
description = "Extract and decompile code.ccp into a clean Python source tree."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uncompyle6>=3.9.2",
    "xdis>=6.1.3",
]

[project.scripts]
code-ccp-extractor = "code_ccp_extractor.main:main"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "ty>=0.0.1a5",
]
